--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <!-- Footer -->
   <footer class="bg-yellow-700 text-white text-center p-4">
-    © 2025 Makunyane Catering. All rights reserved.
+    © 2025 By Hazel's Designs. All rights reserved.
   </footer>
 
 </body>
