--- a/index.html
+++ b/index.html
@@ -3,97 +3,38 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Makunyane Catering</title>
+  <title>Makunyane Catering - Home</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="font-sans bg-white text-gray-800">
 
   <!-- Navbar -->
-  <nav class="fixed w-full bg-yellow-700 text-white shadow-lg z-50">
+  <nav class="bg-yellow-700 text-white shadow-lg fixed w-full z-50">
     <div class="container mx-auto flex justify-between items-center p-4">
       <div class="flex items-center space-x-2">
-        <img src="images/logo.png" alt="Makunyane Catering Logo" class="h-12">
+        <img src="Images/mylogo.png" alt="Makunyane Catering Logo" class="h-12">
         <h1 class="text-2xl font-bold">Makunyane Catering</h1>
       </div>
       <div class="space-x-6">
-        <button onclick="showPage('home')" class="hover:text-yellow-300">Home</button>
-        <button onclick="showPage('about')" class="hover:text-yellow-300">About</button>
-        <button onclick="showPage('services')" class="hover:text-yellow-300">Services</button>
-        <button onclick="showPage('contact')" class="hover:text-yellow-300">Contact</button>
+        <a href="index.html" class="hover:text-yellow-300">Home</a>
+        <a href="about.html" class="hover:text-yellow-300">About</a>
+        <a href="services.html" class="hover:text-yellow-300">Services</a>
+        <a href="contact.html" class="hover:text-yellow-300">Contact</a>
       </div>
     </div>
   </nav>
 
-  <!-- Pages -->
-  <div id="pages" class="pt-20">
-
-    <!-- Home -->
-    <section id="home" class="page h-screen flex items-center justify-center bg-cover bg-center" 
-      style="background-image: url('images/food1.jpg');">
-      <div class="bg-black bg-opacity-50 p-10 rounded-xl text-center text-white">
-        <h2 class="text-5xl font-bold mb-4">Delicious Food, Perfect Service</h2>
-        <p class="mb-6 text-lg">Bringing taste and tradition to your events.</p>
-        <button onclick="showPage('services')" class="px-6 py-3 bg-yellow-500 text-black rounded-lg shadow hover:bg-yellow-400">Our Services</button>
-      </div>
-    </section>
-
-    <!-- About -->
-    <section id="about" class="page hidden py-20 px-6 bg-gray-100">
-      <div class="container mx-auto text-center max-w-3xl">
-        <h3 class="text-3xl font-bold mb-6">About Us</h3>
-        <p class="text-lg">
-          At Makunyane Catering, we specialize in delivering quality meals for every occasion.
-          From traditional African cuisine to modern buffets, our passion is making your events memorable with great taste and service.
-        </p>
-        <img src="images/food2.jpg" alt="About Food" class="mx-auto mt-6 rounded-xl shadow-lg">
-      </div>
-    </section>
-
-    <!-- Services -->
-    <section id="services" class="page hidden py-20 px-6">
-      <h3 class="text-3xl font-bold text-center mb-10">Our Services</h3>
-      <div class="grid md:grid-cols-3 gap-8 container mx-auto">
-        <div class="p-6 border rounded-xl shadow hover:shadow-lg text-center">
-          <img src="images/food3.jpg" alt="Traditional Meal" class="rounded-lg mb-4">
-          <h4 class="text-xl font-bold mb-2">Traditional Catering</h4>
-          <p>Authentic African meals for weddings, funerals, and family gatherings.</p>
-        </div>
-        <div class="p-6 border rounded-xl shadow hover:shadow-lg text-center">
-          <img src="images/food4.jpg" alt="Corporate Meal" class="rounded-lg mb-4">
-          <h4 class="text-xl font-bold mb-2">Corporate Packages</h4>
-          <p>Professional meals for business meetings, workshops, and conferences.</p>
-        </div>
-        <div class="p-6 border rounded-xl shadow hover:shadow-lg text-center">
-          <img src="images/food5.jpg" alt="Buffet" class="rounded-lg mb-4">
-          <h4 class="text-xl font-bold mb-2">Buffet Services</h4>
-          <p>A wide range of dishes to suit every taste and event style.</p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Contact -->
-    <section id="contact" class="page hidden py-20 px-6 bg-yellow-50 text-center">
-      <h3 class="text-3xl font-bold mb-6">Get in Touch</h3>
-      <p class="mb-2">📞 Phone: 069 236 0993</p>
-      <p class="mb-6">📧 Email: hazelweb@yahoo.com</p>
-      <a href="mailto:hazelweb@yahoo.com" class="px-6 py-3 bg-yellow-600 text-white rounded-lg shadow hover:bg-yellow-700">Send Email</a>
-    </section>
-
-  </div>
-
-  <!-- Footer -->
-  <footer class="bg-yellow-700 text-white text-center p-4">
-    © 2025 By Hazel's Designs. All rights reserved.
-  </footer>
-
-  <!-- JavaScript for page switching -->
-  <script>
-    function showPage(pageId) {
-      document.querySelectorAll('.page').forEach(p => p.classList.add('hidden'));
-      document.getElementById(pageId).classList.remove('hidden');
-    }
-  </script>
+  <!-- Hero Section -->
+  <section class="h-screen flex items-center justify-center bg-cover bg-center" 
+           style="background-image: url('Images/profile1.jpg');">
+    <div class="bg-black bg-opacity-50 p-10 rounded-xl text-center text-white">
+      <h2 class="text-5xl font-bold mb-4">Delicious Food, Perfect Service</h2>
+      <p class="mb-6 text-lg">Bringing taste and tradition to your events.</p>
+      <a href="services.html" class="px-6 py-3 bg-yellow-500 text-black rounded-lg shadow hover:bg-yellow-400">Our Services</a>
+    </div>
+  </section>
 
 </body>
 </html>
+
 
