--- a/contact.html
+++ b/contact.html
@@ -27,8 +27,8 @@
   <!-- Contact Section -->
   <section class="py-20 px-6 text-center mt-20">
     <h3 class="text-3xl font-bold mb-6">Get in Touch</h3>
-    <p class="mb-2">📞 Phone: 069 236 0993</p>
-    <p class="mb-6">📧 Email: hazelweb@yahoo.com</p>
+    <p class="mb-2">📞 Phone: 079 178 8633</p>
+    <p class="mb-6">📧 Email: makunyanecatering@gmail.com</p>
     <a href="mailto:hazelweb@yahoo.com" class="px-6 py-3 bg-yellow-600 text-white rounded-lg shadow hover:bg-yellow-700">Send Email</a>
   </section>
 
