--- a/about.html
+++ b/about.html
@@ -1,1 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Makunyane Catering - About Us</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="font-sans bg-yellow-50 text-gray-800">
+
+  <!-- Navbar -->
+  <nav class="bg-yellow-700 text-white shadow-lg fixed w-full z-50">
+    <div class="container mx-auto flex justify-between items-center p-4">
+      <div class="flex items-center space-x-2">
+        <img src="Images/mylogo.png" alt="Makunyane Catering Logo" class="h-12">
+        <h1 class="text-2xl font-bold">Makunyane Catering</h1>
+      </div>
+      <div class="space-x-6">
+        <a href="index.html" class="hover:text-yellow-300">Home</a>
+        <a href="about.html" class="hover:text-yellow-300 font-bold">About</a>
+        <a href="services.html" class="hover:text-yellow-300">Services</a>
+        <a href="contact.html" class="hover:text-yellow-300">Contact</a>
+      </div>
+    </div>
+  </nav>
+
+  <!-- About Section -->
+  <section class="py-20 px-6 text-center max-w-4xl mx-auto mt-20">
+    <h2 class="text-4xl font-bold mb-6 text-yellow-700">Welcome to Makunyane Catering!</h2>
+    <p class="text-lg mb-6">
+      At Makunyane Catering, we don’t just serve food — we create experiences! 
+      From the first bite to the last, every dish is crafted with love, passion, and the finest ingredients. 
+      Whether it’s a wedding, a corporate event, or a family celebration, we make your gatherings unforgettable.
+    </p>
+    <p class="text-lg mb-6">
+      Our menu blends **authentic African flavors** with modern culinary creativity. 
+      We take pride in every detail, from presentation to taste, ensuring that every guest leaves smiling and asking for more.
+    </p>
+    <img src="Images/profile2.jpg" alt="Delicious Food" class="mx-auto mt-6 rounded-xl shadow-lg w-full max-w-xl">
+    <p class="mt-6 text-lg font-semibold text-yellow-700">
+      Let us bring the taste, the joy, and the wow-factor to your next event!
+    </p>
+  </section>
+
+</body>
+</html>
 
