--- a/services.html
+++ b/services.html
@@ -25,27 +25,27 @@
   </nav>
 
   <!-- Services Section -->
-  <section class="py-24 px-6 max-w-6xl mx-auto mt-24">
+  <section class="pt-28 px-6 max-w-6xl mx-auto">
     <h2 class="text-4xl font-bold text-center mb-12 text-yellow-700">Our Services</h2>
     
     <div class="grid md:grid-cols-3 gap-8">
       <!-- Service 1 -->
       <div class="p-6 border rounded-xl shadow hover:shadow-lg flex flex-col items-center">
-        <img src="Images/profile3.jpg" alt="Traditional Meal" class="rounded-lg mb-4 h-48 w-full object-cover">
+        <img src="Images/profile3.jpg" alt="Traditional Meal" class="rounded-lg mb-4 w-full aspect-[4/3] object-cover">
         <h3 class="text-xl font-bold mb-2">Traditional Catering</h3>
         <p class="text-center">Authentic African meals for weddings, funerals, and family gatherings.</p>
       </div>
 
       <!-- Service 2 -->
       <div class="p-6 border rounded-xl shadow hover:shadow-lg flex flex-col items-center">
-        <img src="Images/profile1.jpg" alt="Corporate Package" class="rounded-lg mb-4 h-48 w-full object-cover">
+        <img src="Images/profile1.jpg" alt="Corporate Package" class="rounded-lg mb-4 w-full aspect-[4/3] object-cover">
         <h3 class="text-xl font-bold mb-2">Corporate Packages</h3>
         <p class="text-center">Professional meals for business meetings, workshops, and conferences.</p>
       </div>
 
       <!-- Service 3 -->
       <div class="p-6 border rounded-xl shadow hover:shadow-lg flex flex-col items-center">
-        <img src="Images/profile2.jpg" alt="Buffet Services" class="rounded-lg mb-4 h-48 w-full object-cover">
+        <img src="Images/profile2.jpg" alt="Buffet Services" class="rounded-lg mb-4 w-full aspect-[4/3] object-cover">
         <h3 class="text-xl font-bold mb-2">Buffet Services</h3>
         <p class="text-center">A wide range of dishes to suit every taste and event style.</p>
       </div>
@@ -54,4 +54,5 @@
 
 </body>
 </html>
+
 
