--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <nav class="bg-yellow-700 text-white shadow-lg fixed w-full z-50">
     <div class="container mx-auto flex justify-between items-center p-4">
       <div class="flex items-center space-x-2">
-        <img src="Images/mylogo.png" alt="Makunyane Catering Logo" class="h-12">
+        <img src="Images/mylogo.png" alt="Makunyane Catering Logo" class="h-12 w-12 object-contain">
         <h1 class="text-2xl font-bold">Makunyane Catering</h1>
       </div>
       <div class="space-x-6">
@@ -25,7 +25,7 @@
   </nav>
 
   <!-- About Section -->
-  <section class="py-20 px-6 text-center max-w-4xl mx-auto mt-20">
+  <section class="pt-28 px-6 text-center max-w-4xl mx-auto">
     <h2 class="text-4xl font-bold mb-6 text-yellow-700">Welcome to Makunyane Catering!</h2>
     <p class="text-lg mb-6">
       At Makunyane Catering, we don’t just serve food — we create experiences! 
@@ -33,10 +33,10 @@
       Whether it’s a wedding, a corporate event, or a family celebration, we make your gatherings unforgettable.
     </p>
     <p class="text-lg mb-6">
-      Our menu blends **authentic African flavors** with modern culinary creativity. 
+      Our menu blends <strong>authentic African flavors</strong> with modern culinary creativity. 
       We take pride in every detail, from presentation to taste, ensuring that every guest leaves smiling and asking for more.
     </p>
-    <img src="Images/profile2.jpg" alt="Delicious Food" class="mx-auto mt-6 rounded-xl shadow-lg w-full max-w-xl">
+    <img src="Images/profile2.jpg" alt="Delicious Food" class="mx-auto mt-6 rounded-xl shadow-lg w-full max-w-xl aspect-[4/3] object-cover">
     <p class="mt-6 text-lg font-semibold text-yellow-700">
       Let us bring the taste, the joy, and the wow-factor to your next event!
     </p>
@@ -44,4 +44,5 @@
 
 </body>
 </html>
+
 
