--- a/about.html
+++ b/about.html
@@ -41,6 +41,10 @@
       Let us bring the taste, the joy, and the wow-factor to your next event!
     </p>
   </section>
+<!-- Footer -->
+<footer class="bg-yellow-700 text-white text-center py-4 mt-12">
+  <p class="text-sm font-semibold">&copy; By Hazel's Designs</p>
+</footer>
 
 </body>
 </html>
