--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <a href="services.html" class="px-6 py-3 bg-yellow-500 text-black rounded-lg shadow hover:bg-yellow-400">Our Services</a>
   </div>
 </section>
+  <!-- Footer -->
+<footer class="bg-yellow-700 text-white text-center py-4 mt-12">
+  <p class="text-sm font-semibold">&copy; By Hazel's Designs</p>
+</footer>
+
 </body>
 </html>
 
