--- a/services.html
+++ b/services.html
@@ -51,7 +51,10 @@
       </div>
     </div>
   </section>
-
+  <!-- Footer -->
+<footer class="bg-yellow-700 text-white text-center py-4 mt-12">
+  <p class="text-sm font-semibold">&copy; By Hazel's Designs</p>
+</footer>
 </body>
 </html>
 
