--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
   <title>Makunyane Catering - Contact</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="font-sans bg-yellow-50 text-gray-800">
+<body class="font-sans bg-yellow-50 text-gray-800 flex flex-col min-h-screen">
 
   <!-- Navbar -->
   <nav class="bg-yellow-700 text-white shadow-lg fixed w-full z-50">
@@ -25,8 +25,8 @@
   </nav>
 
   <!-- Contact Section -->
-  <section class="pt-28 px-6 max-w-4xl mx-auto">
-    <h2 class="text-4xl font-bold mb-6 text-yellow-700 text-center">Get in Touch</h2>
+  <main class="flex-grow pt-28 px-6 max-w-4xl mx-auto">
+    <h2 class="text-4xl font-bold mb-8 text-yellow-700 text-center">Get in Touch</h2>
 
     <div class="grid md:grid-cols-2 gap-8 items-start">
       <!-- Contact Info -->
@@ -36,19 +36,20 @@
         <p class="text-lg"><strong>Address:</strong> [Your Address Here]</p>
       </div>
 
-      <!-- Contact Form -->
-      <form class="space-y-4 bg-white p-6 rounded-lg shadow">
-        <input type="text" placeholder="Your Name" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-700">
-        <input type="email" placeholder="Your Email" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-700">
-        <textarea placeholder="Your Message" class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-700 h-32"></textarea>
+      <!-- Contact Form (Formspree) -->
+      <form action="https://formspree.io/f/your-form-id" method="POST" class="space-y-4 bg-white p-6 rounded-lg shadow">
+        <input type="text" name="name" placeholder="Your Name" required class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-700">
+        <input type="email" name="_replyto" placeholder="Your Email" required class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-700">
+        <textarea name="message" placeholder="Your Message" required class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-700 h-32"></textarea>
         <button type="submit" class="bg-yellow-700 hover:bg-yellow-600 text-white font-bold py-3 px-6 rounded-lg w-full transition">Send Message</button>
       </form>
     </div>
-  </section>
-<!-- Footer -->
-<footer class="bg-yellow-700 text-white text-center py-4 mt-12">
-  <p class="text-sm font-semibold">&copy; By Hazel's Designs</p>
-</footer>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-yellow-700 text-white text-center py-4 mt-12">
+    <p class="text-sm font-semibold">&copy; By Hazel's Designs</p>
+  </footer>
 
 </body>
 </html>
