--- a/contact.html
+++ b/contact.html
@@ -1,56 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Makunyane Catering - Contact</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="font-sans bg-yellow-50 text-gray-800 flex flex-col min-h-screen">
+<section id="contact" class="py-12 bg-gray-50">
+  <div class="max-w-xl mx-auto">
+    <h2 class="text-2xl font-bold text-center mb-6">Get in Touch</h2>
+    <p class="text-center mb-6">
+      Phone: 079 178 8633 <br>
+      Email: makunyanecatering@gmail.com <br>
+      Address: [Your Address Here]
+    </p>
 
-  <!-- Navbar -->
-  <nav class="bg-yellow-700 text-white shadow-lg fixed w-full z-50">
-    <div class="container mx-auto flex justify-between items-center p-4">
-      <div class="flex items-center space-x-2">
-        <img src="Images/mylogo.png" alt="Makunyane Catering Logo" class="h-12 w-12 object-contain">
-        <h1 class="text-2xl font-bold">Makunyane Catering</h1>
-      </div>
-      <div class="space-x-6">
-        <a href="index.html" class="hover:text-yellow-300">Home</a>
-        <a href="about.html" class="hover:text-yellow-300">About</a>
-        <a href="services.html" class="hover:text-yellow-300">Services</a>
-        <a href="contact.html" class="hover:text-yellow-300 font-bold">Contact</a>
-      </div>
-    </div>
-  </nav>
+    <form action="https://formspree.io/f/xnnzedvd" method="POST" class="space-y-4">
+      <input type="text" name="name" placeholder="Your Name" required class="w-full p-3 border rounded">
+      <input type="email" name="email" placeholder="Your Email" required class="w-full p-3 border rounded">
+      <textarea name="message" name="message" placeholder="Your Message" required class="w-full p-3 border rounded"></textarea>
 
-  <!-- Contact Section -->
-  <main class="flex-grow pt-28 px-6 max-w-4xl mx-auto">
-    <h2 class="text-4xl font-bold mb-8 text-yellow-700 text-center">Get in Touch</h2>
+      <button type="submit" class="w-full px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
+        Send Message
+      </button>
+    </form>
+  </div>
+</section>
 
-    <div class="grid md:grid-cols-2 gap-8 items-start">
-      <!-- Contact Info -->
-      <div class="space-y-4">
-        <p class="text-lg"><strong>Phone:</strong> 069 236 0993</p>
-        <p class="text-lg"><strong>Email:</strong> hazelweb@yahoo.com</p>
-        <p class="text-lg"><strong>Address:</strong> [Your Address Here]</p>
-      </div>
-
-      <!-- Contact Form (Formspree) -->
-      <form action="https://formspree.io/f/your-form-id" method="POST" class="space-y-4 bg-white p-6 rounded-lg shadow">
-        <input type="text" name="name" placeholder="Your Name" required class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-700">
-        <input type="email" name="_replyto" placeholder="Your Email" required class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-700">
-        <textarea name="message" placeholder="Your Message" required class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-700 h-32"></textarea>
-        <button type="submit" class="bg-yellow-700 hover:bg-yellow-600 text-white font-bold py-3 px-6 rounded-lg w-full transition">Send Message</button>
-      </form>
-    </div>
-  </main>
-
-  <!-- Footer -->
-  <footer class="bg-yellow-700 text-white text-center py-4 mt-12">
-    <p class="text-sm font-semibold">&copy; By Hazel's Designs</p>
-  </footer>
-
-</body>
-</html>
 
