--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,10 @@
     <form action="https://formspree.io/f/xnnzedvd" method="POST" class="space-y-4">
       <input type="text" name="name" placeholder="Your Name" required class="w-full p-3 border rounded">
       <input type="email" name="email" placeholder="Your Email" required class="w-full p-3 border rounded">
-      <textarea name="message" name="message" placeholder="Your Message" required class="w-full p-3 border rounded"></textarea>
+      <textarea name="message" placeholder="Your Message" required class="w-full p-3 border rounded"></textarea>
+
+      <!-- Optional hidden field for anti-spam -->
+      <input type="text" name="_gotcha" style="display:none">
 
       <button type="submit" class="w-full px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
         Send Message
