--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,66 @@
-<section id="contact" class="py-12 bg-gray-50">
-  <div class="max-w-xl mx-auto">
-    <h2 class="text-2xl font-bold text-center mb-6">Get in Touch</h2>
-    <p class="text-center mb-6">
-      Phone: 079 178 8633 <br>
-      Email: makunyanecatering@gmail.com <br>
-      Address: [Your Address Here]
-    </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Makunyane Catering - Contact</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body class="bg-white text-gray-800 font-sans">
 
-    <form action="https://formspree.io/f/xnnzedvd" method="POST" class="space-y-4">
-      <input type="text" name="name" placeholder="Your Name" required class="w-full p-3 border rounded">
-      <input type="email" name="email" placeholder="Your Email" required class="w-full p-3 border rounded">
-      <textarea name="message" placeholder="Your Message" required class="w-full p-3 border rounded"></textarea>
+  <!-- Contact Section -->
+  <section id="contact" class="py-12 bg-gray-50">
+    <div class="max-w-xl mx-auto">
+      <h2 class="text-3xl font-bold text-center mb-6">Get in Touch</h2>
+      <p class="text-center mb-6">
+        Phone: 079 178 8633 <br>
+        Email: makunyanecatering@gmail.com <br>
+        Address: [Your Address Here]
+      </p>
 
-      <!-- Optional hidden field for anti-spam -->
-      <input type="text" name="_gotcha" style="display:none">
+      <form id="contactForm" action="https://formspree.io/f/xnnzedvd" method="POST" class="space-y-4">
+        <input type="text" name="name" placeholder="Your Name" required class="w-full p-3 border rounded">
+        <input type="email" name="email" placeholder="Your Email" required class="w-full p-3 border rounded">
+        <textarea name="message" placeholder="Your Message" required class="w-full p-3 border rounded"></textarea>
 
-      <button type="submit" class="w-full px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
-        Send Message
-      </button>
-    </form>
-  </div>
-</section>
+        <!-- Anti-spam hidden field -->
+        <input type="text" name="_gotcha" style="display:none">
+
+        <button type="submit" class="w-full px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">
+          Send Message
+        </button>
+      </form>
+
+      <p id="formMessage" class="text-center mt-4 text-green-600 font-semibold"></p>
+    </div>
+  </section>
+
+  <!-- JavaScript for inline success message -->
+  <script>
+    const form = document.getElementById('contactForm');
+    const formMessage = document.getElementById('formMessage');
+
+    form.addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const data = new FormData(form);
+      const res = await fetch(form.action, {
+        method: 'POST',
+        body: data,
+        headers: { 'Accept': 'application/json' }
+      });
+
+      if (res.ok) {
+        formMessage.textContent = "Thank you! Your message has been sent.";
+        form.reset();
+      } else {
+        formMessage.textContent = "Oops! Something went wrong. Please try again.";
+        formMessage.classList.add('text-red-600');
+      }
+    });
+  </script>
+
+</body>
+</html>
+
 
 
