--- a/contact.html
+++ b/contact.html
@@ -31,13 +31,13 @@
     <div class="grid md:grid-cols-2 gap-8 items-start">
       <!-- Contact Info -->
       <div class="space-y-4">
-        <p class="text-lg"><strong>Phone:</strong> 069 236 0993</p>
-        <p class="text-lg"><strong>Email:</strong> hazelweb@yahoo.com</p>
+        <p class="text-lg"><strong>Phone:</strong> 079 178 8633</p>
+        <p class="text-lg"><strong>Email:</strong> makunyanecatering@gmail.com</p>
         <p class="text-lg"><strong>Address:</strong> [Your Address Here]</p>
       </div>
 
       <!-- Contact Form (Formspree) -->
-      <form action="https://formspree.io/f/your-form-id" method="POST" class="space-y-4 bg-white p-6 rounded-lg shadow">
+      <form action="https://formspree.io/f/xnnzedvd" method="POST" class="space-y-4 bg-white p-6 rounded-lg shadow">
         <input type="text" name="name" placeholder="Your Name" required class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-700">
         <input type="email" name="_replyto" placeholder="Your Email" required class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-700">
         <textarea name="message" placeholder="Your Message" required class="w-full p-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-yellow-700 h-32"></textarea>
